# synmem

./: .cursorrules  .gitignore  .windsurfrules  AGENTS.md  Cargo.toml  README.md
.ai/: ARCHITECTURE.md  CONTEXT_LOG.md
.github/: copilot-instructions.md
.github/actions/structure-validator/src/: main.rs
.github/workflows/: structure-validator.yml  update-protocol.yml
crates/synmem-browser/: Cargo.toml
crates/synmem-browser/src/: lib.rs
crates/synmem-browser/src/chromium/: dom_extractor.rs  driver.rs  error.rs  mod.rs  session_manager.rs
crates/synmem-browser/src/parallel/: batch_processor.rs  batch_scraper.rs  mod.rs  page_processor.rs
crates/synmem-cli/: Cargo.toml
crates/synmem-cli/src/: main.rs
crates/synmem-cloud/: Cargo.toml
crates/synmem-cloud/src/: lib.rs
crates/synmem-cloud/src/api/: error.rs  gateway.rs  middleware.rs  mod.rs  routes.rs
crates/synmem-cloud/src/domain/: api_key.rs  audit.rs  mod.rs  rate_limit.rs  tier.rs  user.rs
crates/synmem-cloud/src/services/: auth.rs  browser_pool.rs  mod.rs  session.rs  storage.rs
crates/synmem-core/: Cargo.toml
crates/synmem-core/src/: error.rs  lib.rs
crates/synmem-core/src/domain/: mod.rs
crates/synmem-core/src/domain/entities/: browser_action.rs  browser_state.rs  browser_task.rs  chat_context.rs  embedding.rs  extracted_content.rs  macro_entity.rs  memory.rs  mod.rs  page.rs  saved_context.rs  scraped_page.rs  search_result.rs  session.rs
crates/synmem-core/src/domain/services/: automation.rs  crypto.rs  extraction.rs  macro_service.rs  memory_service.rs  mod.rs  navigation.rs  search_service.rs  session_manager.rs
crates/synmem-core/src/ports/: mod.rs
crates/synmem-core/src/ports/inbound/: automation.rs  browser_control.rs  macro_controller.rs  memory_query.rs  mod.rs  scraper.rs  session_control.rs
crates/synmem-core/src/ports/outbound/: browser_driver.rs  embedding.rs  macro_storage.rs  mod.rs  session_persistence.rs  storage.rs
crates/synmem-marketplace/: Cargo.toml
crates/synmem-marketplace/src/: lib.rs
crates/synmem-marketplace/src/domain/: mod.rs
crates/synmem-marketplace/src/domain/entities/: install.rs  mod.rs  package.rs  payout.rs  review.rs  schema_def.rs
crates/synmem-marketplace/src/domain/services/: marketplace.rs  mod.rs  payout.rs  review.rs
crates/synmem-marketplace/src/ports/: mod.rs
crates/synmem-marketplace/src/ports/inbound/: mod.rs
crates/synmem-marketplace/src/ports/outbound/: mod.rs
crates/synmem-marketplace/src/schema/: mod.rs
crates/synmem-mcp/: Cargo.toml
crates/synmem-mcp/src/: lib.rs  main.rs  server.rs
crates/synmem-mcp/src/resources/: mod.rs
crates/synmem-mcp/src/tools/: automate.rs  click.rs  macro_tools.rs  memory_tools.rs  mod.rs  navigate.rs  scrape.rs  screenshot.rs  scroll.rs  search.rs  type_text.rs  wait_for.rs
crates/synmem-mcp/src/tools/twitter/: error.rs  mod.rs  post.rs  rate_limiter.rs  read_thread.rs  search.rs  tests.rs  timeline.rs  types.rs
crates/synmem-mcp/tests/: navigation_integration.rs
crates/synmem-storage/: Cargo.toml
crates/synmem-storage/src/: lib.rs
crates/synmem-storage/src/embeddings/: fastembed_adapter.rs  mock_adapter.rs  mod.rs
crates/synmem-storage/src/sqlite/: migrations.rs  mod.rs  repository.rs
crates/synmem-subscription/: Cargo.toml
crates/synmem-subscription/src/: error.rs  lib.rs  service.rs
crates/synmem-subscription/src/adapters/: memory.rs  mod.rs  stripe.rs
crates/synmem-subscription/src/domain/: license.rs  metrics.rs  mod.rs  subscription.rs  tier.rs
crates/synmem-subscription/src/ports/: mod.rs  payment.rs  service.rs  storage.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  EXTENSION_API.md  INSTALLATION.md  MCP_TOOLS.md  README.md  SECURITY.md
docs/enterprise/: ENTERPRISE_FEATURES.md
docs/examples/: basic_scraping.md  chat_capture.md  twitter_automation.md
docs/launch/: LAUNCH_CHECKLIST.md  PRESS_KIT.md  PRODUCT_HUNT.md  SOCIAL_MEDIA.md
docs/store/: PRIVACY_POLICY.md  STORE_LISTING.md  SUBMISSION_CHECKLIST.md
extension/: manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
extension/icons/: README.md
extension/src/background/: service-worker.ts
extension/src/content/: index.ts  sync.ts
extension/src/content/scrapers/: chatgpt.ts  claude.ts  gemini.ts  index.ts  twitter.ts  types.ts  universal.ts
extension/src/content/scrapers/__tests__/: scrapers.test.ts
extension/src/native-host/: bridge.ts  index.ts
extension/src/popup/: index.html  index.ts  index.tsx  styles.css
extension/src/types/: index.ts  messages.ts
native-host/: Cargo.toml
native-host/src/: error.rs  handler.rs  main.rs  messages.rs  protocol.rs
scripts/: check-protocol-update.ps1  check-protocol-update.sh  init_project.ps1  init_project.sh  install_native_host.ps1  install_native_host.sh
website/: README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
website/src/components/: Demo.astro  Features.astro  Footer.astro  Header.astro  Hero.astro  Install.astro  OpenSource.astro  Pricing.astro
website/src/layouts/: Layout.astro
website/src/pages/: blog.astro  docs.astro  index.astro
website/src/styles/: global.css
