[workspace]
members = [
    "crates/synmem-core",
    "crates/synmem-browser",
    "crates/synmem-mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["SynMem Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Async traits
async-trait = "0.1"

# Tracing
tracing = "0.1"

# Browser automation
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }

# Parallelization
rayon = "1"
