[workspace]
members = [
    "crates/synmem-core",
    "crates/synmem-browser",
    "crates/synmem-mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["SynMem Contributors"]
repository = "https://github.com/iberi22/synmem"
rust-version = "1.70"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Async traits
async-trait = "0.1"

# Tracing
tracing = "0.1"

# Browser automation
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }

# Parallelization
rayon = "1"

# Datetime & UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.21"

# Security dependencies
ring = "0.17"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }

# Testing
tokio-test = "0.4"
tempfile = "3"
