[package]
name = "synmem-browser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Browser driver adapter for SynMem"

[dependencies]
synmem-core.workspace = true
tokio.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
