[package]
name = "synmem-browser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Browser automation and DOM extraction for SynMem"

[dependencies]
synmem-core = { workspace = true }
scraper = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
