[package]
name = "synmem-cloud"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SynMem Cloud Infrastructure - Premium features for SynMem"

[dependencies]
# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Database
sqlx.workspace = true

# Authentication
jsonwebtoken.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Async trait
async-trait.workspace = true

[dev-dependencies]
tokio-test.workspace = true
