[package]
name = "synmem-core"
description = "Core domain and application layer for SynMem - hexagonal architecture ports"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
uuid.workspace = true
url.workspace = true
