[package]
name = "synmem-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
synmem-core = { path = "../synmem-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
rusqlite.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-test.workspace = true
tempfile.workspace = true
