[package]
name = "synmem-subscription"
version.workspace = true
edition = "2021"
license.workspace = true
description = "Subscription and payment system for SynMem"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
